--- a/data structure/时间复杂度的定义，记号以及几种计算方法.md
+++ b/data structure/时间复杂度的定义，记号以及几种计算方法.md
@@ -49,15 +49,40 @@ g(n) ϵ o(f(n))： 存在n0 > 0，任取c>0，对所有的n > n0，我们有g(n)
 
 例子：2n2+27 = o(n3): n2的增长速度本质上就是比n3慢。我们最后找出的n0会是c的函数。
 
-## 5. w()
+## 5. ω()
 符号o()表示了一种强下界的感觉，和Ω()定义差不多，只是条件更加严格了，对于所有c>0，那个下界都是下界。
 
-g(n) ϵ w(f(n))： 存在n0 > 0，任取c>0，对所有的n > n0，我们有g(n) ≥ cf(n)。
+g(n) ϵ ω(f(n))： 存在n0 > 0，任取c>0，对所有的n > n0，我们有g(n) ≥ cf(n)。
 
 这个符号内含的意义就是，当达到一定规模后，我的耗时总会超过这个下界函数（f(n)），不管c怎么帮它，c取100，100000000，耗时最后还是会比这个下界函数多，这是由于我的增长速度本质上就是快过这个下界函数。
 
-例子：2n2+27 = w(n): n2的增长速度本质上就是比n快。我们最后找出的n0会是c的函数。
+例子：2n2+27 = ω(n): n2的增长速度本质上就是比n快。我们最后找出的n0会是c的函数。
 
+## 复杂度的极限定义（更贴近数学思维）
+对于任何数学函数，这三个记号可以用来度量其“渐近表现”，即当趋于无穷大时的阶的情况，这是算法分析中非常重要的概念。大家可以把它们分别想象成≤、≥和，分别估计了函数的渐近上界、渐近下界和准确界。诚然，渐近关系和确切大小关系是有区别的，但当问题规模很大时，忽略这种区别能大大降低算法分析的难度。
+
+下面我们就来具体定义这三种记号的表示。
+
+设函数f ( n )代表某一算法在输入大小为n的情况下的工作量（效率），则在n趋向很大的时候，我们将f (n)与另一行为已知的函数g(n)进行比较：
+
+1）如果=0，则称f (n)在数量级上严格小于g(n)，记为f (n)=o( g(n))。
+
+2）如果，则称f (n)在数量级上严格大于g(n)，记为f (n)=ω( g(n))。
+
+3）如果=c，这里c为非0常数，则称f (n)在数量级上等于g(n)，即f (n)和g(n)是同一个数量级的函数，记为：f (n)=Θ( g(n))。
+
+4）如果f (n)在数量级上小于或等于g(n)，则记为f (n)=O( g(n))。
+
+5）如果f(n)在数量级上大于或等于g(n)，则记为f (n)=Ω( g(n))。
+
+这里我们假定f (n)，g (n)是非负单调的，且极限存在。如果这个极限不存在，则无法对f (n)和g (n)进行比较。在进行此种计算时，一个经常用到的技术是洛必达（L'Hopital）法则。该法则由17世纪法国数学家Guillaume de L'Hopital发现（也有人认为是瑞士数学家Johann Bernoulli发现的）。该法则声称，两个函数的比率极限等于两个函数的导数的比率极限，这里当然假定两个函数的导数比率的极限存在，即有：
+
+
+ 
+
+有了这个定义，就可以对素性测试的两个算法进行比较了。
+
+，符合第1个定义，因此这两个素性测试算法的效率差异是数量级的差异。
 ## 时间复杂度的计算方法
 对于算法的耗时的公式，一般不会像上面那样的例子直接给你一个清楚的2n2+27这种清晰的公式。比如许多时候我们会遇到递归这种情况，就会出现算法耗时的递推公式。
 
