--- a/data structure/时间复杂度的定义，记号以及几种计算方法.md
+++ b/data structure/时间复杂度的定义，记号以及几种计算方法.md
@@ -7,7 +7,7 @@
 
 时间复杂度是一个函数，它描述了算法的运行时间，并且给出了运行时间与输入规模之间的关系。
 
-## 时间复杂度的分析记号：O(), Ω(), Θ()，o(), w()
+## 时间复杂度的分析记号：O(), Ω(), Θ()，o(), ω()
 对于时间复杂度的分析，我们都是使用渐进分析，这种分析方法关注地核心就是算法耗时会如何随着输入规模增长？我们使用三种记号来说明这个问题。
 我们使用字母n来表示输入的规模
 
