--- a/data structure/时间复杂度的定义，记号以及几种计算方法.md
+++ b/data structure/时间复杂度的定义，记号以及几种计算方法.md
@@ -1,5 +1,5 @@
 # 时间复杂度的定义，记号以及几种计算方法
-
+$$ \lim_{n \to +\infty} \frac{1}{n(n+1)} \quad and \quad \lim_{x\leftarrow{示例}} \frac{1}{n(n+1)} $$
 时间复杂度在关心些什么
 如果接触过算法，那么对于算法的时间复杂度分析一定不陌生，因为时间复杂度是算法优劣的一个重要评价标准。
 
