--- a/data structure/时间复杂度的定义，记号以及几种计算方法.md
+++ b/data structure/时间复杂度的定义，记号以及几种计算方法.md
@@ -65,7 +65,7 @@ g(n) ϵ ω(f(n))： 存在n0 > 0，任取c>0，对所有的n > n0，我们有g(n
 设函数f ( n )代表某一算法在输入大小为n的情况下的工作量（效率），则在n趋向很大的时候，我们将f (n)与另一行为已知的函数g(n)进行比较：
 
 1）如果 ![](https://github.com/hanweicone/test1/blob/master/img/CodeCogsEqn.gif)，则称f (n)在数量级上严格小于g(n)，记为f (n)=o( g(n))。
-<p vlign="center">1）如果 <img src="https://github.com/hanweicone/test1/blob/master/img/CodeCogsEqn.gif">，则称f (n)在数量级上严格小于g(n)，记为f (n)=o( g(n))。</p>
+<tr><td vlign="center">1）如果 <img src="https://github.com/hanweicone/test1/blob/master/img/CodeCogsEqn.gif">，则称f (n)在数量级上严格小于g(n)，记为f (n)=o( g(n))。</td></tr>
 2）如果，则称f (n)在数量级上严格大于g(n)，记为f (n)=ω( g(n))。
 
 3）如果=c，这里c为非0常数，则称f (n)在数量级上等于g(n)，即f (n)和g(n)是同一个数量级的函数，记为：f (n)=Θ( g(n))。
