--- a/data structure/时间复杂度的定义，记号以及几种计算方法.md
+++ b/data structure/时间复杂度的定义，记号以及几种计算方法.md
@@ -1,4 +1,8 @@
 # 时间复杂度的定义，记号以及几种计算方法
+
+a | b | c
+d | e | f
+
 时间复杂度在关心些什么
 如果接触过算法，那么对于算法的时间复杂度分析一定不陌生，因为时间复杂度是算法优劣的一个重要评价标准。
 
@@ -65,7 +69,7 @@ g(n) ϵ ω(f(n))： 存在n0 > 0，任取c>0，对所有的n > n0，我们有g(n
 设函数f ( n )代表某一算法在输入大小为n的情况下的工作量（效率），则在n趋向很大的时候，我们将f (n)与另一行为已知的函数g(n)进行比较：
 
 1）如果 ![](https://github.com/hanweicone/test1/blob/master/img/CodeCogsEqn.gif)，则称f (n)在数量级上严格小于g(n)，记为f (n)=o( g(n))。
-<table border="none"><tr><td>1）如果 </td><td vlign="center"><img src="https://github.com/hanweicone/test1/blob/master/img/CodeCogsEqn.gif"></td><td>，则称f (n)在数量级上严格小于g(n)，记为f (n)=o( g(n))。</td></tr></table>
+<table border-collapse="collapse" ><tr><td border="none">1）如果 </td><td border="none" vlign="center"><img src="https://github.com/hanweicone/test1/blob/master/img/CodeCogsEqn.gif"></td><td border="none">，则称f (n)在数量级上严格小于g(n)，记为f (n)=o( g(n))。</td></tr></table>
 2）如果，则称f (n)在数量级上严格大于g(n)，记为f (n)=ω( g(n))。
 
 3）如果=c，这里c为非0常数，则称f (n)在数量级上等于g(n)，即f (n)和g(n)是同一个数量级的函数，记为：f (n)=Θ( g(n))。
