--- a/data structure/时间复杂度的定义，记号以及几种计算方法.md
+++ b/data structure/时间复杂度的定义，记号以及几种计算方法.md
@@ -1,7 +1,6 @@
 # 时间复杂度的定义，记号以及几种计算方法
+<link href="https://github.com/hanweicone/test1/blob/master/img/style.css" rel="stylesheet"></link>
 
-a | b | c
-d | e | f
 
 时间复杂度在关心些什么
 如果接触过算法，那么对于算法的时间复杂度分析一定不陌生，因为时间复杂度是算法优劣的一个重要评价标准。
