--- a/data structure/时间复杂度的定义，记号以及几种计算方法.md
+++ b/data structure/时间复杂度的定义，记号以及几种计算方法.md
@@ -1,5 +1,5 @@
 # 时间复杂度的定义，记号以及几种计算方法
-
+https://www.codecogs.com/latex/eqneditor.php
 
 
 时间复杂度在关心些什么
@@ -71,14 +71,14 @@ g(n) ϵ ω(f(n))： 存在n0 > 0，任取c>0，对所有的n > n0，我们有g(n
 
 2）如果![](https://github.com/hanweicone/test1/blob/master/img/CodeCogsEqn%20(1).gif)，则称f(n)在数量级上严格大于g(n)，记为f (n)=ω( g(n))。
 
-3）如果=c，这里c为非0常数，则称f (n)在数量级上等于g(n)，即f (n)和g(n)是同一个数量级的函数，记为：f (n)=Θ( g(n))。
+3）如果![](https://github.com/hanweicone/test1/blob/master/img/CodeCogsEqn%20(2).gif)，这里c为非0常数，则称f (n)在数量级上等于g(n)，即f (n)和g(n)是同一个数量级的函数，记为：f (n)=Θ( g(n))。
 
 4）如果f (n)在数量级上小于或等于g(n)，则记为f (n)=O( g(n))。
 
 5）如果f(n)在数量级上大于或等于g(n)，则记为f (n)=Ω( g(n))。
 
 这里我们假定f (n)，g (n)是非负单调的，且极限存在。如果这个极限不存在，则无法对f (n)和g (n)进行比较。在进行此种计算时，一个经常用到的技术是洛必达（L'Hopital）法则。该法则由17世纪法国数学家Guillaume de L'Hopital发现（也有人认为是瑞士数学家Johann Bernoulli发现的）。该法则声称，两个函数的比率极限等于两个函数的导数的比率极限，这里当然假定两个函数的导数比率的极限存在，即有：
-
+![](https://github.com/hanweicone/test1/blob/master/img/CodeCogsEqn%20(3).gif)
 
  
 
