--- a/data structure/时间复杂度的定义，记号以及几种计算方法.md
+++ b/data structure/时间复杂度的定义，记号以及几种计算方法.md
@@ -84,6 +84,7 @@ g(n) ϵ ω(f(n))： 存在n0 > 0，任取c>0，对所有的n > n0，我们有g(n
 
 有了这个定义，就可以对素性测试的两个算法进行比较了。
 
+![](https://github.com/hanweicone/test1/blob/master/img/CodeCogsEqn(4).gif "latex(\lim_{n \to \infty }\frac{\sqrt 2^{logN}}{2^{logN}} = \lim_{n \to \infty }\frac{\sqrt 2^{logN}}{\sqrt 2^{logN}*\sqrt 2^{logN}}=\lim_{n \to \infty }\frac{1}{\sqrt 2^{logN}}=0)")
 ，符合第1个定义，因此这两个素性测试算法的效率差异是数量级的差异。
 ## 时间复杂度的计算方法
 对于算法的耗时的公式，一般不会像上面那样的例子直接给你一个清楚的2n2+27这种清晰的公式。比如许多时候我们会遇到递归这种情况，就会出现算法耗时的递推公式。
