--- a/data structure/时间复杂度的定义，记号以及几种计算方法.md
+++ b/data structure/时间复杂度的定义，记号以及几种计算方法.md
@@ -1,5 +1,4 @@
 # 时间复杂度的定义，记号以及几种计算方法
-https://www.codecogs.com/latex/eqneditor.php
 
 
 时间复杂度在关心些什么
@@ -129,3 +128,5 @@ a ≥ 1, b > 1, c > 0 and k ≥ 0
 2.接下来我们通过符号，将时间复杂度的表示进行了量化，包括给了上界，下界，紧，强上界，强下界的这些类似概念，很好地区刻画了一个算法的时间随着规模增长的形式和规律。
 
 3.我们对算法的时间复杂度计算方法进行了一个初步的介绍，并对递归的算法给出了一个综合性的公式。
+
+> 数学算式图片生成：https://www.codecogs.com/latex/eqneditor.php
