--- a/data structure/时间复杂度的定义，记号以及几种计算方法.md
+++ b/data structure/时间复杂度的定义，记号以及几种计算方法.md
@@ -88,10 +88,30 @@ g(n) ϵ ω(f(n))： 存在n0 > 0，任取c>0，对所有的n > n0，我们有g(n
 ## 时间复杂度的计算方法
 对于算法的耗时的公式，一般不会像上面那样的例子直接给你一个清楚的2n^2+27这种清晰的公式。比如许多时候我们会遇到递归这种情况，就会出现算法耗时的递推公式。
 
-### 例子1：选择排序
+### 例子1：
+```java
+ int i = 1;
+ while(i <= n){
+  System.out.println("*");
+  i *= 2;
+ }
+```
+每个n对应的程序执行次数为(1,2,2,3,3,3,3,4,4,4,4,4,4,4,4,5,5,5,5,5,5,5,....),每到n=2^N(N为自然数)时候，n对应的程序执行次数增加一次，时间复杂度为：log2n。
+
+### 例子2：
+```java
+ int i = n;
+ while(i > 0){
+  for(int j = 0;j < n;j++)
+   Systeme.out.println("*");
+   i /= 2;//注意这句不在for循环里
+ }
+```
+while循环O(logn)，for循环O(n),整个程序时间复杂度为nlogn
+### 例子3：选择排序
 给n个没排好序的数，我们从这列数先选出最小的那个排最前面，然后再从剩下没排好序的数继续选最小的排，持续下去。这种递归每次问题规模减小1，所以我们有耗时的递推公式如下：T(n)=T(n-1)+cn，我的n个数排序耗时等于我选好个最小的时间加上剩下n-1个数进行排序，从n个数里选最小的数耗时cn因为我们要浏览这n个数。
 
-### 例子2：归并排序
+### 例子4：归并排序
 对于给n个没排好序的数排序，我们可以把它平均拆解成两份，每份是n/2个数，再对这n/2个数进行排序，排好后，我们对左右两边进行融合，这需要浏览这n个数才可以按顺序融合好。所以耗时递推公式如下：T(n) = T(n/2) + cn
 
 对于这些有递推公式的时间复杂度的计算，有如下方法可以解决：
