--- a/data structure/二叉查找树.md
+++ b/data structure/二叉查找树.md
@@ -14,7 +14,7 @@
 
 ## 二、基本实现
 ### 1、数据表示
-``java
+```java
     private class Node {
         
         private Key key;
@@ -30,7 +30,7 @@
         }
         
     }
-``
+```
  
 
 ### 2、测试所有方法的用例
@@ -45,7 +45,7 @@
 
 需要实现toString来配合测试用例：
 
-``java
+```java
     private String BSTString(Node x) {
         
         if(x == null)
@@ -59,7 +59,7 @@
         
         return s;
     }
-``
+```
  
 
  
@@ -79,7 +79,7 @@ D、重复ABC步骤，直至search miss或者search hit。
 
 递归实现：
 
-``java
+```java
 　　/**
      * Returns the value associated with the given key.
      * 
@@ -109,14 +109,14 @@ D、重复ABC步骤，直至search miss或者search hit。
             return x.val;//serach hit
         
     }
-``
+```
  
 
  
 
 非递归实现：
 
-``java
+```java
     /**
      * Returns the value associated with the given key.
      * 
@@ -144,7 +144,7 @@ D、重复ABC步骤，直至search miss或者search hit。
         return null;//search miss
         
     }
-``
+```
  
 
  
@@ -168,7 +168,7 @@ F、重复ABCD，直至插入或者更新成功。
 
 递归实现：
 
-``java
+```java
 　　/**
      * Inserts the specified key-value pair into the symbol table, overwriting the old 
      * value with the new value if the symbol table already contains the specified key.
@@ -211,14 +211,14 @@ F、重复ABCD，直至插入或者更新成功。
         return x;
         
     }
-``
+```
  递归实现的，要在插入之后更新节点的size。
 
  
 
 非递归实现：
 
-``java
+```java
 /**
      * Inserts the specified key-value pair into the symbol table, overwriting the old 
      * value with the new value if the symbol table already contains the specified key.
@@ -269,7 +269,7 @@ F、重复ABCD，直至插入或者更新成功。
             parent.right = new Node(key, val);
         
     }
-``
+```
 非递归实现的比较麻烦，需要处理一些特殊情况：
 
 A、需要记录父节点，用于更新父节点的链接。
@@ -299,7 +299,7 @@ C、重复AB，直至找到一个根节点的左链接是null。
 
 递归实现：
 
-``java
+```java
     /**
      * Returns the smallest key in the symbol table.
      * 
@@ -318,12 +318,12 @@ C、重复AB，直至找到一个根节点的左链接是null。
             return x;
         return min(x.left);
     }
-``
+```
  
 
 非递归实现：
 
-``java
+```java
     /**
      * Returns the smallest key in the symbol table.
      * 
@@ -353,7 +353,7 @@ C、重复AB，直至找到一个根节点的左链接是null。
         return cur;
         
     }
-``
+```
 这里private的min函数，在后边delete需要调用到。
 
  
@@ -362,7 +362,7 @@ max的思路和min思路基本差不多，只是左右相反即可。
 
 递归实现：
 
-``java
+```java
     /**
      * Return the largest key in the symbol table.
      * 
@@ -381,14 +381,14 @@ max的思路和min思路基本差不多，只是左右相反即可。
             return x;
         return max(x.right);
     }
-``
+```
  
 
  
 
 非递归实现：
 
-``java
+```java
     /**
      * Return the largest key in the symbol table.
      * 
@@ -409,7 +409,7 @@ max的思路和min思路基本差不多，只是左右相反即可。
         return cur.key;
         
     }
-``
+```
  
 
  
@@ -433,7 +433,7 @@ E、重复ABCD
 
 递归实现：
 
-``java
+```java
     /**
      * Return the largest key in the symbol table less than or equal to {@code key}.
      * 
@@ -476,14 +476,14 @@ E、重复ABCD
             return x;//no, return x
         
     }
-``
+```
  
 
  
 
 非递归实现：
 
-``java
+```java
     /**
      * Return the largest key in the symbol table less than or equal to {@code key}.
      * 
@@ -520,7 +520,7 @@ E、重复ABCD
         return result;
         
     }
-``
+```
 这里用result来缓存，用于解决思路中D的情况。
 
  
@@ -529,7 +529,7 @@ ceiling和floor思路差不多，只不过左右对调过来。
 
 递归实现：
 
-``java
+```java
     /**
      * Return the smallest key in the symbol table larger than or equal to {@code key}.
      * 
@@ -572,14 +572,14 @@ ceiling和floor思路差不多，只不过左右对调过来。
             return x;
         
     }
-``
+```
  
 
  
 
 非递归实现：
 
-``java
+```java
     /**
      * Return the smallest key in the symbol table larger than or equal to {@code key}.
      * 
@@ -617,7 +617,7 @@ ceiling和floor思路差不多，只不过左右对调过来。
         return result;
         
     }
-``
+```
  
 
 ### 7、select实现
@@ -639,7 +639,7 @@ E、重复ABCD
 
 递归实现：
 
-``java
+```java
     /**
      * Return the kth smallest key in the symbol table.
      * 
@@ -679,14 +679,14 @@ E、重复ABCD
             return x;
         
     }
-``
+```
  
 
  
 
 非递归实现：
 
-``java
+```java
     /**
      * Return the kth smallest key in the symbol table.
      * 
@@ -723,7 +723,7 @@ E、重复ABCD
         return null;
         
     }
-``
+```
  
 
  
@@ -745,7 +745,7 @@ E、重复ABCD。
 
 递归实现：
 
-``java
+```java
     /**
      * 
      * Return the number of keys in the symbol table strictly less than {@code key}.
@@ -779,12 +779,12 @@ E、重复ABCD。
             return size(x.left);
         
     }
-``
+```
  
 
 非递归实现：
 
-``java
+```java
     /**
      * 
      * Return the number of keys in the symbol table strictly less than {@code key}.
@@ -820,7 +820,7 @@ E、重复ABCD。
         return result;
         
     }
-``
+```
  
 
  
@@ -835,7 +835,7 @@ E、重复ABCD。
 
 递归实现：
 
-``java
+```java
     /**
      * Removes the smallest key and its associated value from the symbol table
      * 
@@ -858,12 +858,12 @@ E、重复ABCD。
         
         return x;
     }
-``
+```
  
 
 非递归实现：
 
-``java
+```java
     /**
      * Removes the smallest key and its associated value from the symbol table
      * 
@@ -897,7 +897,7 @@ E、重复ABCD。
         return x;
         
     }
-``
+```
  
 
 非递归：
@@ -914,7 +914,7 @@ C、非递归实现更新size跟递归实现的顺序相反，要边搜索边更
 
 递归实现：
 
-``java
+```java
     /**
      * Removes the largest key and associated value from the symbol table.
      * 
@@ -936,14 +936,14 @@ C、非递归实现更新size跟递归实现的顺序相反，要边搜索边更
         
         return x;
     }
-``
+```
  
 
  
 
 非递归实现：
 
-``java
+```java
     /**
      * Removes the largest key and associated value from the symbol table.
      * 
@@ -969,7 +969,7 @@ C、非递归实现更新size跟递归实现的顺序相反，要边搜索边更
         parent.right = cur.left;
         
     }
-``
+```
  
 
 非递归：
@@ -1001,7 +1001,7 @@ D、x.left = t.left。
 
 递归实现：
 
-``java
+```java
     /**
      * Removes the specified key and its associated value from this symbol table
      * If the key is not in this symbol table or this symbol table is empty, do nothing
@@ -1048,14 +1048,14 @@ D、x.left = t.left。
         
         return x;
     }
-``
+```
  
 
  
 
 非递归实现：
 
-``java
+```java
     /**
      * Removes the specified key and its associated value from this symbol table
      * If the key is not in this symbol table or this symbol talbe is empty, do nothing
@@ -1130,7 +1130,7 @@ D、x.left = t.left。
         }
         
     }
-``
+```
  
 
 这个非递归的实现太麻烦了，有很多特殊情况需要处理。
@@ -1146,7 +1146,7 @@ D、非递归实现更新size跟递归实现的顺序相反，要边搜索边更
  
 
 ### 11、其他操作
-``java
+```java
     /**
      * Returns all keys in the symbol table as an {@code Iterable}.
      * To iterate over all of the keys in the symbol table named {@code st},
@@ -1258,7 +1258,7 @@ D、非递归实现更新size跟递归实现的顺序相反，要边搜索边更
             throw new IllegalArgumentException("key is null");
         return get(key) != null;
     }
-``
+```
  
 
 ## 三、性能分析
