--- a/data structure/这或许是东半球分析十大排序算法最好的一篇文章.md
+++ b/data structure/这或许是东半球分析十大排序算法最好的一篇文章.md
@@ -41,7 +41,7 @@
 
 从左往右依次冒泡，将小的往右移动
 
-<figure style="font-size:inherit;color:inherit;line-height:inherit;">![640?wx_fmt=png](https://ss.csdn.net/p?https://mmbiz.qpic.cn/mmbiz_png/D67peceibeIQrf3Wy2pLes0oPQtUxKUIdKq5MCAcJ3O8U2r3BEIQ2hUymeUqfG1txjqvbL0RrkS6ZRa44wsodEw/640?wx_fmt=png "冒泡排序1")
+<figure style="font-size:inherit;color:inherit;line-height:inherit;">![](https://ss.csdn.net/p?https://mmbiz.qpic.cn/mmbiz_png/D67peceibeIQrf3Wy2pLes0oPQtUxKUIdKq5MCAcJ3O8U2r3BEIQ2hUymeUqfG1txjqvbL0RrkS6ZRa44wsodEw/640?wx_fmt=png%20%22%E5%86%92%E6%B3%A1%E6%8E%92%E5%BA%8F1%22)
 
 冒泡排序1
 
