--- a/data structure/这或许是东半球分析十大排序算法最好的一篇文章.md
+++ b/data structure/这或许是东半球分析十大排序算法最好的一篇文章.md
@@ -38,7 +38,7 @@
 
 从左往右依次冒泡，将小的往右移动
 
-<figure>![](http://image109.360doc.com/DownloadImg/2019/06/1511/163663413_3_20190615110210191 "冒泡排序1")
+<figure>![](https://ss.csdn.net/p?https://mmbiz.qpic.cn/mmbiz_gif/D67peceibeISr0bkaEfMsaD5mAqbgibWqibLUjNibn8NvqYsjTTUAZUp6U3eNsPOLHq9ZXnx5ezTibOY5MbHfQAmc5A/640?wx_fmt=gif)
 
 冒泡排序1
 
