--- a/c++/随机数---秒及毫秒级随机数种子.md
+++ b/c++/随机数---秒及毫秒级随机数种子.md
@@ -32,18 +32,16 @@ struct   timeb{
        short   dstflag;         /* 为日光节约时间的修正状态，如果为非0代表启用日光节约时间修正 */
 };
 ```
-二、代码实例：
+## 二、代码实例：
 
-1、以秒为随机数种子
-
+### 1、以秒为随机数种子
+```c++
 unsigned int tseed = time(NULL);
 srand(tseed);
 unsigned int crand = rand();
-1
-2
-3
-2、以秒为随机数种子产生一定范围内的数值
-
+```
+### 2、以秒为随机数种子产生一定范围内的数值
+```c++
 unsigned int tseed = time(NULL);
 srand(tseed);
 // 生成[b,a]范围内的数值，包括b和a
@@ -52,26 +50,16 @@ unsigned int crand = rand() % range + b;
 // 生成[b,a)范围内的数值，包括b，不包括a
 unsigned int range = a - b;
 unsigned int crand = rand() % range + b;
-1
-2
-3
-4
-5
-6
-7
-8
-3、以毫秒为随机数种子
-
+```
+### 3、以毫秒为随机数种子
+```c++
 struct timeb timeSeed;
 ftime(&timeSeed);
 srand(timeSeed.time * 1000 + timeSeed.millitm);  // milli time
 unsigned int crand = rand();
-1
-2
-3
-4
-4、以毫秒为随机数种子产生一定范围内的数值
-
+```
+### 4、以毫秒为随机数种子产生一定范围内的数值
+```c++
 struct timeb timeSeed;
 ftime(&timeSeed);
 srand(timeSeed.time * 1000 + timeSeed.millitm);  // milli time
@@ -81,3 +69,4 @@ unsigned int crand = rand() % range + b;
 // 生成[b,a)范围内的数值，包括b，不包括a
 unsigned int range = a - b;
 unsigned int crand = rand() % range + b;
+```
